<resources>
    <string name="app_name">riaraschool</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="math">Math</string>
    <string name="admin">Admin</string>
    <string name="english">English</string>
    <string name="exit_app">Exit App</string>
    <string name="_1st_grade">1st Grade:</string>
    <string name="_4_lessons">4 Lessons</string>
    <string name="learn_how_to_count_0_5">Learn how to count 0- 5</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="lesson">Lesson</string>
    <string name="description">Description</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_grade">Enter Grade</string>
    <string name="no_result">No Result Found</string>
    <string name="username">Username</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="making">Making Learning Fun</string>
    <string name="riara_schools">RIARA Schools</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">No Account? Register Here</string>
    <string name="action_login">Have an Account? Sign In Here</string>
    <string name="register">Register</string>
    <string name="welcome_note">WELCOME TO RIARA SCHOOLS</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="welcome_to_riara_schools">Welcome to Riara Schools</string>
    <string name="have_fun_while_learning">Have fun while learning</string>
    <string name="about">About</string>
    <string name="map">Map</string>
</resources>