<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round"
        android:id="@+id/layout_subject"
        android:padding="2dp">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/dim70"
            android:layout_height="@dimen/dim70"
            android:layout_marginTop="@dimen/dim12"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/jackalope" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.626"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtgrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1st_grade"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt25" />

                <TextView
                    android:id="@+id/txtsubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/math"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt25" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/txtdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learn_how_to_count_0_5"
                android:textColor="@color/yellow_touch"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/textLess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_lessons"
                android:textColor="@color/yellow_touch"
                android:textSize="16sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>