<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey"
        android:orientation="vertical"
        tools:context=".SplashScreenActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/first_line"
                android:layout_width="@dimen/dim20"
                android:layout_height="@dimen/dim50"
                android:layout_centerHorizontal="true"
                android:background="@drawable/white_line" />

            <View
                android:id="@+id/second_line"
                android:layout_width="@dimen/dim20"
                android:layout_height="@dimen/dim100"
                android:layout_marginLeft="@dimen/dim8"
                android:layout_toRightOf="@id/first_line"
                android:background="@drawable/second_gradient" />

            <View
                android:id="@+id/third_line"
                android:layout_width="@dimen/dim20"
                android:layout_height="@dimen/dim250"
                android:layout_marginLeft="@dimen/dim8"
                android:layout_toRightOf="@id/second_line"
                android:background="@color/fuchsia" />

            <View
                android:id="@+id/fourth_line"
                android:layout_width="@dimen/dim20"
                android:layout_height="@dimen/dim200"
                android:layout_marginLeft="@dimen/dim8"
                android:layout_toRightOf="@id/third_line"
                android:background="@drawable/second_gradient" />

            <View
                android:id="@+id/fifth_line"
                android:layout_width="@dimen/dim20"
                android:layout_height="@dimen/dim220"
                android:layout_marginLeft="@dimen/dim8"
                android:layout_toRightOf="@id/fourth_line"
                android:background="@color/fuchsia" />

            <View
                android:id="@+id/sixth_line"
                android:layout_width="@dimen/dim20"
                android:layout_height="@dimen/dim150"
                android:layout_marginLeft="@dimen/dim8"
                android:layout_toRightOf="@id/fifth_line"
                android:background="@drawable/white_line" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim20" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_note"
                android:textColor="@color/yellow_touch"
                android:textSize="@dimen/txt25"
                app:layout_constraintBottom_toTopOf="@+id/reg_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.065" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/dim60"
                android:layout_marginStart="@dimen/dim24"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="@dimen/dim24"
                android:background="@drawable/round_white"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dim8"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/txt24"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/dim60"
                android:layout_marginStart="@dimen/dim24"
                android:layout_marginTop="@dimen/dim68"
                android:layout_marginEnd="@dimen/dim24"
                android:layout_marginBottom="256dp"
                android:background="@drawable/round_white"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/dim8"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/txt24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_email"
                app:layout_constraintVertical_bias="0.491" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_password"
                app:layout_constraintVertical_bias="0.486" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/action_login"
                android:textColor="@color/yellow_touch"
                android:textSize="@dimen/txt25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</layout>