<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical"
    tools:context=".SplashScreenActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/first_line"
            android:layout_width="@dimen/dim20"
            android:layout_height="@dimen/dim50"
            android:layout_centerHorizontal="true"
            android:background="@drawable/white_line" />

        <View
            android:id="@+id/second_line"
            android:layout_width="@dimen/dim20"
            android:layout_height="@dimen/dim100"
            android:layout_marginLeft="@dimen/dim8"
            android:layout_toRightOf="@id/first_line"
            android:background="@drawable/second_gradient" />

        <View
            android:id="@+id/third_line"
            android:layout_width="@dimen/dim20"
            android:layout_height="@dimen/dim250"
            android:layout_marginLeft="@dimen/dim8"
            android:layout_toRightOf="@id/second_line"
            android:background="@color/fuchsia" />

        <View
            android:id="@+id/fourth_line"
            android:layout_width="@dimen/dim20"
            android:layout_height="@dimen/dim200"
            android:layout_marginLeft="@dimen/dim8"
            android:layout_toRightOf="@id/third_line"
            android:background="@drawable/second_gradient" />

        <View
            android:id="@+id/fifth_line"
            android:layout_width="@dimen/dim20"
            android:layout_height="@dimen/dim220"
            android:layout_marginLeft="@dimen/dim8"
            android:layout_toRightOf="@id/fourth_line"
            android:background="@color/fuchsia" />

        <View
            android:id="@+id/sixth_line"
            android:layout_width="@dimen/dim20"
            android:layout_height="@dimen/dim150"
            android:layout_marginLeft="@dimen/dim8"
            android:layout_toRightOf="@id/fifth_line"
            android:background="@drawable/white_line" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim20" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="@dimen/dim50"
            android:layout_marginStart="@dimen/dim24"
            android:layout_marginTop="@dimen/dim76"
            android:layout_marginEnd="@dimen/dim24"
            android:background="@drawable/round_white"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/txt24"
            android:padding="@dimen/dim8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="@dimen/dim50"
            android:layout_marginStart="@dimen/dim24"
            android:layout_marginTop="@dimen/dim68"
            android:layout_marginEnd="@dimen/dim24"
            android:background="@drawable/round_white"
            android:hint="@string/prompt_password"
            android:padding="@dimen/dim8"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/txt24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/button_round"
            android:enabled="false"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.3" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>